Changes the Frontend/build  in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+Frontend/node_modules
 Frontend/.pnp
 .pnp.jsfs
 
@@ -9,7 +9,7 @@ Frontend/.pnp
 Frontend/coverage
 
 # production
-build
+Frontend/build
 
 # misc
 .DS_Store
