--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "c13-project2-team4",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^2.2.0",
