optimized pulling raw data to local db. // wil need to rename DB --group to decide

--- a/Backend/server/.env
+++ b/Backend/server/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://Cobi10:Ada4real123@cluster0.751yf.mongodb.net/CalgaryTransit?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/CalgaryTransit
