--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,12 +20,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
-  "scripts": {
-    "start": "PORT=10000 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+
+"scripts": {
+  "build": "react-scripts build",
+  "start": "react-scripts start"
+},
+
+  
   "eslintConfig": {
     "extends": [
       "react-app",
