--- a/Backend/server/.env
+++ b/Backend/server/.env
@@ -5,7 +5,7 @@ MONGO_URI=mongodb+srv://Cobi10:Ada4real123@cluster0.751yf.mongodb.net/
 
 
 
-PORT=3001
+#PORT=3001
 
 # MONGO_URI=mongodb://localhost:27017/
 # DB_NAME=CalgaryTransit
