--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,7 @@
 
 "scripts": {
   "build": "react-scripts build",
-  "start": "react-scripts start"
+  "start": "set PORT=10000 && react-scripts start"
 },
 
   
